# zakat-calculator-BE

./: .gitignore  Cargo.toml  README.md  log4rs.yaml
src/: main.rs
src/rocket_helpers/: responder.rs
src/sqlite_helpers/: sqlite_connection.rs
src/web_pages/: controllers.rs
src/web_pages/controllers/: sqlite_controller.rs
