[package]
name = "zakat-calculator-BE"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "serde_json"] }
tokio = "1.41.1"
sqlite = "0.36.1"
serde = { version = "1.0.215", features = ["derive"] }
rocket_cors = "0.6.0"
log = "0.4.22"
log4rs = "1.3.0"
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
schemars = { version = "0.8", features = ["derive"] }

